# motion

./: .gitignore  LICENSE.rst  README.md  pyproject.toml  requirements.txt
src/animator/: __init__.py  animator.py
src/motion/: __init__.py  animator.py  curves.py  motion.py
